# pyscfad

./: .buildinfo  .codecov.yml  .gitignore  .pylintrc  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  codecov.yml  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.claude/agents/: bug-verifier.md  context-builder.md  fix-implementer.md  fix-planner.md  fix-verifier.md
.claude/commands/: fix-issue.md  label-issue.md
.claude/hooks/: stop-finish.sh
.github/workflows/: build_doc.sh  build_doc.yml  build_lib.sh  build_pyscf_linux.sh  build_pyscf_macos.sh  build_pyscfadlib.sh  build_wheels.yml  ci.yml  claude-code-review.yml  claude-fix-bug.yml  claude-issue-triage.yml  claude-verify-bug.yml  claude.yml  deploy_doc.yml  install.sh  install_pyscf.sh  install_pyscfadlib.sh  lint.sh  publish_cuda_plugin.yml  publish_pyscfad.yml  publish_pyscfadlib.yml  pylint.yml  release_github.yml  release_info.sh  run_test.sh
_sources/: index.rst
_sources/api_reference/: geomopt.rst  mp.rst  pbc.rst  tools.rst
_sources/getting_started/: index.rst  install.rst
_static/: documentation_options.js
api_reference/: ao2mo.html  cc.html  df.html  dft.html  fci.html  geomopt.html  gto.html  gw.html  index.html  ml.html  mp.html  pbc.html  prop.html  scf.html  tdscf.html  tools.html  util.html  xtb.html
api_reference/api/: pyscfad.ao2mo.addons.html  pyscfad.ao2mo.html  pyscfad.ao2mo.incore.html  pyscfad.cc.ccsd.html  pyscfad.cc.ccsd_rdm.html  pyscfad.cc.ccsd_t.html  pyscfad.cc.ccsd_t_slow.html  pyscfad.cc.dfccsd.html  pyscfad.cc.dfdcsd.html  pyscfad.cc.gccsd_t.html  pyscfad.cc.html  pyscfad.cc.rccsd.html  pyscfad.cc.rintermediates.html  pyscfad.df.addons.html  pyscfad.df.df.html  pyscfad.df.df_jk.html  pyscfad.df.html  pyscfad.df.incore.html  pyscfad.dft.html  pyscfad.dft.libxc.html  pyscfad.dft.numint.html  pyscfad.dft.rks.html  pyscfad.dft.uks.html  pyscfad.fci.fci_slow.html  pyscfad.fci.html  pyscfad.geomopt.geometric_solver.html  pyscfad.geomopt.html  pyscfad.gto.eval_gto.html  pyscfad.gto.html  pyscfad.gto.mole.html  pyscfad.gto.mole_lite.html  pyscfad.gto.moleintor.html  pyscfad.gto.moleintor_lite.html  pyscfad.gw.html  pyscfad.gw.rpa.html  pyscfad.ml.gto.basis_array.html  pyscfad.ml.gto.html  pyscfad.ml.gto.mole_pad.html  pyscfad.ml.html  pyscfad.ml.pbc.gto.cell_pad.html  (+74 more)
api_reference/apidoc/: pyscfad.ao2mo.addons.html  pyscfad.ao2mo.html  pyscfad.ao2mo.incore.html  pyscfad.cc.ccsd.html  pyscfad.cc.ccsd_rdm.html  pyscfad.cc.ccsd_t.html  pyscfad.cc.ccsd_t_slow.html  pyscfad.cc.dfccsd.html  pyscfad.cc.dfdcsd.html  pyscfad.cc.html  pyscfad.cc.rccsd.html  pyscfad.cc.rintermediates.html  pyscfad.df.addons.html  pyscfad.df.df.html  pyscfad.df.df_jk.html  pyscfad.df.html  pyscfad.df.incore.html  pyscfad.dft.html  pyscfad.dft.libxc.html  pyscfad.dft.numint.html  pyscfad.dft.rks.html  pyscfad.experimental.html  pyscfad.experimental.util.html  pyscfad.fci.fci_slow.html  pyscfad.fci.html  pyscfad.geomopt.html  (+71 more)
development/: index.html
doc/: make.py  requirements.txt
docs/: objects.inv
doctrees/: environment.pickle  index.doctree
getting_started/: index.html  install.html  overview.html
html/: .buildinfo  index.html  py-modindex.html  search.html  searchindex.js
pyscfad/: __init__.py  implicit_diff.py  typing.py  util.py  version.py
pyscfad/lib/: CMakeLists.txt  __init__.py  _numpy_helper_opt.py  chkfile.py  davidson_lite.py  diis.py  jax_helper.py  linalg_helper.py  logger.py  misc.py  np_helper.py  numpy_helper.py  ops.py
pyscfad/lib/gto/: CMakeLists.txt  restore_int2e_deriv.c
pyscfad/lib/test/: test_linalg_helper.py  test_np_helper.py
pyscfadlib/: .bazelrc  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  WORKSPACE  patch_pyscf.sh  pyproject.toml  pyscf.patch  pyscf.patch.2.3  setup.py
pyscfadlib/plugins/: BUILD
pyscfadlib/plugins/cuda/: BUILD  CMakeLists.txt  build_plugin.py  plugin_setup.py
pyscfadlib/pyscfadlib/: BUILD  CMakeLists.txt  __init__.py  _cuda_plugin.py  apply_patch.sh  copy_pyscf_lib.sh  ffi_helpers.h  gpu_solver.py  kernel_nanobind_helpers.h  lapack.py  lib.py  libcint.patch  libcint.patch.5.4  libcint.patch.6.1  pyscfad.bzl
pyscfadlib/pyscfadlib/cuda/: BUILD  CMakeLists.txt  handle_pool.cc  handle_pool.h  solver.cc  solver_kernels.cc  solver_kernels.h  vendor.h
pyscfadlib/pyscfadlib/cuint/: BUILD  cuint.cc  dipole.cc  dipole.h  latovlp.cc  latovlp.h  ovlp.cc  ovlp.h  quadrupole.cc  quadrupole.h
pyscfadlib/pyscfadlib/gto/: CMakeLists.txt
pyscfadlib/pyscfadlib/lapack/: CMakeLists.txt  kernel_nanobind_helpers.h  lapack.cc  lapack_kernels.cc  lapack_kernels.h
pyscfadlib/pyscfadlib/np_helper/: CMakeLists.txt  np_helper.c  np_helper.h  pack_tril.c
pyscfadlib/pyscfadlib/tools/: BUILD  LICENSE.txt  build_cuda_kernels_wheel.py  build_utils.py
pyscfadlib/pyscfadlib/vhf/: CMakeLists.txt
pyscfadlib/pyscfadlib/vjp/: CMakeLists.txt
pyscfadlib/pyscfadlib/vjp/ao2mo/: nr_ao2mo_vjp.c
pyscfadlib/pyscfadlib/vjp/cc/: ccsd_t.c  ccsd_t.h  ccsd_t_vjp.c  lno_ccsd_t.c  lno_ccsd_t_vjp.c
pyscfadlib/pyscfadlib/vjp/gto/: fill_int2c_lat.c  fill_int2c_vjp.c  fill_int2e_vjp.c  fill_nr_3c_vjp.c
pyscfadlib/pyscfadlib/vjp/np_helper/: pack_tril_vjp.c
pyscfadlib/pyscfadlib/vjp/util/: omp_reduce.c  pack_tril.c  util.h
pyscfadlib/pyscfadlib/vjp/vhf/: df_jk_vjp.c  nr_incore_vjp.c
pyscfadlib/test/: test_cgto.py  test_lapack.py
pyscfadlib/tools/: prepare_build_environment_linux.sh  repair_wheel_linux.sh
pyscfadlib/vjp/: CMakeLists.txt
pyscfadlib/vjp/ao2mo/: nr_ao2mo_vjp.c
pyscfadlib/vjp/cc/: ccsd_t.c  ccsd_t_vjp.c  lno_ccsd_t.c  lno_ccsd_t_vjp.c
pyscfadlib/vjp/gto/: fill_int2c_vjp.c  fill_int2e_vjp.c  fill_nr_3c_vjp.c
pyscfadlib/vjp/np_helper/: pack_tril_vjp.c
pyscfadlib/vjp/vhf/: df_jk_vjp.c
tests/: __init__.py  conftest.py  test_backend.py  test_davidson_lite.py  test_dft.py  test_floatx.py  test_hf_lite.py  test_hf_pad.py  test_moleintor_lite.py  test_scf.py  util.py
user_guide/: backends.html  custom_methods.html  index.html
(+2010 files in other folders)
