[build-system]
requires = [
    "scikit-build-core",
    "nanobind",
    "jax>=0.7.1,<0.9",
]
build-backend = "scikit_build_core.build"

[project]
name = "pyscfadlib"
dynamic = ["version"]
description = "Support library for PySCFAD"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Xing Zhang", email = "zhangxing.nju@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "nanobind",
    "jax>=0.7.1,<0.9",
]

[project.urls]
Homepage = "https://github.com/fishjojo/pyscfad"
Repository = "https://github.com/fishjojo/pyscfad"
Documentation = "https://fishjojo.github.io/pyscfad/index.html"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "pyscfadlib/version.py"

[tool.scikit-build]
cmake.source-dir = "pyscfadlib"

[tool.cibuildwheel]
build-verbosity = 1

test-requires = ["pytest", "pyscf==2.11.0", "jax>=0.7.1,<0.9"]
test-command = "pytest --import-mode=append {package}/test"
#test-skip = "cp311-macosx_arm64"

container-engine = "docker"
manylinux-x86_64-image = "manylinux2014"
skip = ["pp*", "*musllinux*"]

[tool.cibuildwheel.config-settings]
"cmake.define.WITH_F12" = "OFF"
"build-dir" = "build/{wheel_tag}"

[tool.cibuildwheel.linux]
#archs = ["x86_64", "aarch64"]
before-all = [
    "ulimit -n 1024",
#    "ln -s libquadmath.so.0 /usr/lib64/libquadmath.so",
    "yum install -y epel-release",
    "yum-config-manager --enable epel",
    "yum install -y openblas-devel",
]
repair-wheel-command = "auditwheel -v repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
archs = ["auto64"]
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

